--- a/core.css
+++ b/core.css
@@ -7,33 +7,37 @@ a, a:visited, a:active, a:hover { outline: none; text-decoration: underline; col
 table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #fff; }
 
 .wrapper { 
-    width: 80em; 
+    max-width: 1200px; 
+    min-width: 320px;
     margin: 0px auto; 
 }
 #header { 
     height: 18em; 
-    background-color: #011; 
+    background-color: #012; 
     color: #fff; 
-    background-image: url('images/header-bg.jpeg'); 
-    background-repeat: no-repeat; 
-    background-position: center center; 
     border-bottom: 2px solid #a0a0a0; 
     background-size: 100%;
     box-shadow: 0px 5px 10px #888; 
     margin-bottom: 2em;
+    overflow: hidden;
+    position: relative;
 }
-#header h3 { 
+#header .wrapper h3 { 
     font-size: 3em;
     text-shadow: 0px 0px 10px #ccc;
     line-height: 5em;
-    padding: 2em 0 0 0;
+    padding: 2em 0 0 .25em;
 }
 
 #content { min-height: 20em; }
 #content .leftCol { padding-left: 1em; width: 60%; float: left; }
-#content .rightCol { padding-left: 2em; width: 30%; float: left; border-left: 1px solid #e0e0e0; }
+#content .rightCol { padding-left: 1em; width: 30%; float: left; }
 #content h2 { font-weight: bold; margin-bottom: 1em; } 
+#content p.social { border-top: 2px solid #c0c0c0; border-bottom: 2px solid #c0c0c0; text-align: center; padding: .5em 0; margin: 2em 0; }
+#content p.social a { display: inline-block; margin-right: 1em; }
+#content div.mugShot { text-align: center; }
+#content div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-radius: 5px; }
 
 #footer { clear: both; padding-top: 1em; }
-#footer .wrapper { border-top: 1px solid #a0a0a0; padding: 0 1em; }
-#footer .wrapper p { font-size: .875em; line-height: 2em; }
+#footer .wrapper { padding: 0 1em; }
+#footer .wrapper p { border-top: 1px solid #a0a0a0; font-size: .875em; line-height: 2em; } 
