--- a/core.css
+++ b/core.css
@@ -28,15 +28,18 @@ table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #fff; }
     line-height: 5em;
     padding: 2em 0 0 .25em;
 }
+#header .wrapper ul { list-style-type: none; margin-top: -20em; float: right; margin-right: 1em; } 
+#header .wrapper ul li { display: inline-block; text-shadow: none; margin-left: 2em; }
+#header .wrapper ul li a { text-decoration: none; color: #fff; letter-spacing: 2px; }
 
 #content { min-height: 20em; }
-#content .leftCol { padding-left: 1em; width: 60%; float: left; }
+#content .leftCol { padding-left: 1em; width: 65%; float: left; }
 #content .rightCol { padding-left: 1em; width: 30%; float: left; }
 #content h2 { font-weight: bold; margin-bottom: 1em; } 
 #content p.social { border-top: 2px solid #c0c0c0; border-bottom: 2px solid #c0c0c0; text-align: center; padding: .5em 0; margin: 2em 0; }
 #content p.social a { display: inline-block; margin-right: 1em; }
 #content div.mugShot { text-align: center; }
-#content div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-radius: 5px; }
+#content div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-radius: 5px; box-shadow: 0px 0px 20px #111; }
 
 #footer { clear: both; padding-top: 1em; }
 #footer .wrapper { padding: 0 1em; }
