--- a/core.css
+++ b/core.css
@@ -7,8 +7,7 @@ a, a:visited, a:active, a:hover { outline: none; text-decoration: underline; col
 table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #fff; }
 
 .wrapper { 
-    max-width: 1200px; 
-    min-width: 320px;
+    max-width: 1300px; 
     margin: 0px auto; 
 }
 #header { 
@@ -44,3 +43,36 @@ table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #fff; }
 #footer { clear: both; padding-top: 1em; }
 #footer .wrapper { padding: 0 1em; }
 #footer .wrapper p { border-top: 1px solid #a0a0a0; font-size: .875em; line-height: 2em; } 
+
+@media (max-width: 1024px) {
+    #header {
+        height: 3.5em;
+    }
+    #header .wrapper h3 {
+        font-size: 2em;
+        line-height: 1.5em;
+        padding: 0 0 0 .25em;
+    }
+    #header .wrapper ul {
+        margin-top: -2em;
+    }
+    #header .wrapper ul li {
+        margin-left: .5em;
+    }
+}
+
+@media (max-width: 790px) {
+    #content .rightCol {
+        float: none;
+        width: auto;
+    }
+    #content .leftCol {
+        float: none;
+        width: auto;
+    }
+    #content div.mugShot { display: none; }
+}
+
+@media (max-width: 480px){
+    #header .wrapper ul { display: none; }
+}
