--- a/core.css
+++ b/core.css
@@ -44,18 +44,20 @@ table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #fff; }
 #footer .wrapper { padding: 0 1em; }
 #footer .wrapper p { border-top: 1px solid #a0a0a0; font-size: .875em; line-height: 2em; } 
 
+@media (max-height: 768px){
+    #header { height: 12em; }
+    #header .wrapper h3 { font-size: 2em; }
+    #header .wrapper ul { margin-top: -13em; }
+}
+
 @media (max-width: 1024px) {
-    #header {
-        height: 3.5em;
-    }
+    #header { height: 3.5em; }
     #header .wrapper h3 {
         font-size: 2em;
         line-height: 1.5em;
         padding: 0 0 0 .25em;
     }
-    #header .wrapper ul {
-        margin-top: -2em;
-    }
+    #header .wrapper ul { margin-top: -2em; }
     #header .wrapper ul li {
         margin-left: .5em;
     }
@@ -71,8 +73,12 @@ table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #fff; }
         width: auto;
     }
     #content div.mugShot { display: none; }
+    #content p.banter { display: none; }
+    #content p.social { border-top: none; border-bottom: none; }
 }
 
 @media (max-width: 480px){
     #header .wrapper ul { display: none; }
 }
+
+
