--- a/core.css
+++ b/core.css
@@ -34,10 +34,12 @@ table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #fff; }
 #content { min-height: 20em; }
 #content .leftCol { padding-left: 1em; width: 65%; float: left; }
 #content .rightCol { padding-left: 1em; width: 30%; float: left; }
-#content p.social { border-top: 2px solid #c0c0c0; border-bottom: 2px solid #c0c0c0; text-align: center; padding: .5em 0; margin: 2em 0; }
-#content p.social a { display: inline-block; margin-right: 1em; }
-#content div.mugShot { text-align: center; }
-#content div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-radius: 5px; box-shadow: 0px 0px 20px #111; }
+
+p.social { border-top: 2px solid #c0c0c0; border-bottom: 2px solid #c0c0c0; text-align: center; padding: .5em 0; margin: 2em 0; }
+p.social a { display: inline-block; margin-right: 1em; }
+
+div.mugShot { text-align: center; }
+div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-radius: 5px; box-shadow: 0px 0px 20px #111; background-color: #000; }
 
 #footer { clear: both; padding-top: 1em; }
 #footer .wrapper { padding: 0 1em; }
@@ -95,5 +97,3 @@ table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #fff; }
 @media (max-width: 480px){
     #header .wrapper ul { display: none; }
 }
-
-
