--- a/core.css
+++ b/core.css
@@ -46,6 +46,7 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
 #footer .wrapper p { border-top: 1px solid #a0a0a0; font-size: .875em; line-height: 2em; } 
 
 .post h2 { font-weight: bold; margin-bottom: 1em; } 
+.post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
 .noItems { font-style: italic; }
 
 @media (max-height: 768px){
