--- a/core.css
+++ b/core.css
@@ -1,17 +1,17 @@
 * { margin: 0px; padding: 0px }
 html { overflow-y: scroll; }
-body { font-family: "Open Sans", Tahoma; font-size: 15px; line-height: 20px; color: #333; background-color: #f0f0f0; }
+body { font-family: "Open Sans", Tahoma; font-size: 18px; color: #333; background-color: #f0f0f0; }
 input, select, textarea { font-family: "Open Sans", Tahama; color: #111; background-color: #fff; border-radius: 3px; padding: 2px; }
 h1, h2, h3, h4, h5, h6 { font-weight: 100; }
 a, a:visited, a:active, a:hover { outline: none; text-decoration: underline; color: #06f; }
-table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #fff; }
+table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #eee; }
 
 .wrapper { 
     max-width: 1300px; 
     margin: 0px auto; 
 }
 #header { 
-    height: 18em; 
+    height: 15em; 
     background-color: #012; 
     color: #fff; 
     border-bottom: 2px solid #a0a0a0; 
@@ -24,10 +24,10 @@ table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #fff; }
 #header .wrapper h3 { 
     font-size: 3em;
     text-shadow: 0px 0px 10px #ccc;
-    line-height: 5em;
+    line-height: 3em;
     padding: 2em 0 0 .25em;
 }
-#header .wrapper ul { list-style-type: none; margin-top: -20em; float: right; margin-right: 1em; } 
+#header .wrapper ul { list-style-type: none; margin-top: -14em; float: right; margin-right: 1em; } 
 #header .wrapper ul li { display: inline-block; text-shadow: none; margin-left: 2em; }
 #header .wrapper ul li a { text-decoration: none; color: #fff; letter-spacing: 2px; }
 
@@ -49,13 +49,13 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
 .post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
 .noItems { font-style: italic; }
 
-@media (max-height: 768px){
-    #header { height: 12em; }
+@media (max-height: 850px){
+    #header { height: 10em; }
     #header .wrapper h3 { font-size: 2em; }
-    #header .wrapper ul { margin-top: -13em; }
+    #header .wrapper ul { margin-top: -9em; }
 }
 
-@media (max-height: 480px){
+@media (max-height: 550px){
     #header { height: 3.5em; }
     #header .wrapper h3 {
         font-size: 2em;
@@ -71,8 +71,8 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
 @media (max-width: 1024px) {
     #header { height: 3.5em; }
     #header .wrapper h3 {
-        font-size: 2em;
-        line-height: 1.5em;
+        font-size: 1.5em;
+        line-height: 2em;
         padding: 0 0 0 .25em;
     }
     #header .wrapper ul { margin-top: -2em; }
