--- a/core.css
+++ b/core.css
@@ -30,13 +30,16 @@ table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #eee; }
 #header a.hamburger {
     float: right;
     width: 1em;
-    color: #eee;
-    margin-top: -1.5em;
+    height: 1em;
+    margin-top: -1.3em;
     text-decoration: none;
     font-size: 2em;
     cursor: pointer;
     display: none;
     margin-right: .5em;
+    background-image: url(/images/hamburger.png);
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 #header .wrapper ul { list-style-type: none; margin-top: -14em; float: right; margin-right: 1em; } 
@@ -124,10 +127,14 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
     }
     #header .wrapper ul li {
         display: block;
+        margin-left: 0;
+    }
+    #header .wrapper ul li:hover {
+        background-color: #123;
     }
     #header .wrapper ul li a {
         display: block; 
-        padding: .75em 0;
+        padding: .75em;
     }
     #header .wrapper a.hamburger { display: inline-block; }
 }
