--- a/core.css
+++ b/core.css
@@ -5,6 +5,7 @@ input, select, textarea { font-family: "Open Sans", Tahama; color: #111; backgro
 h1, h2, h3, h4, h5, h6 { font-weight: 100; }
 a, a:visited, a:active, a:hover { outline: none; text-decoration: underline; color: #06f; }
 table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #eee; }
+p { text-align: justify; }
 
 .wrapper { 
     max-width: 1300px; 
@@ -43,7 +44,7 @@ table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #eee; }
 }
 
 #header .wrapper ul { list-style-type: none; margin-top: -14em; float: right; margin-right: 1em; } 
-#header .wrapper ul li { display: inline-block; text-shadow: none; margin-left: 2em; }
+#header .wrapper ul li { display: inline-block; text-shadow: none; margin-right: 2em; }
 #header .wrapper ul li a { text-decoration: none; color: #fff; letter-spacing: 2px; }
 
 #content { min-height: 20em; }
@@ -52,8 +53,7 @@ table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #eee; }
 
 p.social { border-top: 2px solid #c0c0c0; border-bottom: 2px solid #c0c0c0; text-align: center; padding: .5em 0; margin: 2em 0; }
 p.social a { display: inline-block; margin-right: 1em; }
-
-p.banter { padding: 0 1em; }
+p.banter { padding: 0 1em; text-align: center; }
 
 div.mugShot { text-align: center; }
 div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-radius: 5px; box-shadow: 0px 0px 20px #111; background-color: #000; }
@@ -81,9 +81,7 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
         padding: 0 0 0 .25em;
     }
     #header .wrapper ul { margin-top: -2em; }
-    #header .wrapper ul li {
-        margin-left: .5em;
-    }
+    #header .wrapper ul li { margin-right: .5em; }
 }
 
 @media (max-width: 1024px) {
@@ -95,9 +93,7 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
         padding: 0 0 0 .25em;
     }
     #header .wrapper ul { margin-top: -2.2em; }
-    #header .wrapper ul li {
-        margin-left: .5em;
-    }
+    #header .wrapper ul li { margin-right: .5em; }
 }
 
 @media (max-width: 790px) {
@@ -127,7 +123,7 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
     }
     #header .wrapper ul li {
         display: block;
-        margin-left: 0;
+        margin-right: 0;
     }
     #header .wrapper ul li:hover {
         background-color: #123;
