--- a/core.css
+++ b/core.css
@@ -6,6 +6,7 @@ h1, h2, h3, h4, h5, h6 { font-weight: 100; }
 a, a:visited, a:active, a:hover { outline: none; text-decoration: underline; color: #06f; }
 table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #eee; }
 p { text-align: justify; }
+blockquote { margin: 2em; font-style: italic; }
 
 .wrapper { 
     max-width: 1300px; 
