--- a/core.css
+++ b/core.css
@@ -49,8 +49,8 @@ blockquote { margin: 2em; font-style: italic; }
 #header .wrapper ul li a { text-decoration: none; color: #fff; letter-spacing: 2px; }
 
 #content { min-height: 20em; }
-#content .leftCol { padding: 0 1em; width: 65%; float: left; }
-#content .rightCol { width: 30%; float: left; }
+#content .leftCol { padding: 0 1.5em; width: 65%; float: left; }
+#content .rightCol { width: 29%; float: left; }
 
 p.social { border-top: 2px solid #c0c0c0; border-bottom: 2px solid #c0c0c0; text-align: center; padding: .5em 0; margin: 2em 0; }
 p.social a { display: inline-block; margin-right: 1em; }
@@ -63,7 +63,7 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
 #footer .wrapper { padding: 0 1em; }
 #footer .wrapper p { border-top: 1px solid #a0a0a0; font-size: .875em; line-height: 2em; } 
 
-.post h2 { font-weight: bold; margin-bottom: 1em; } 
+.post h2 { font-weight: 400; margin-bottom: 1em; text-align: left; color: #25458E; }
 .post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
 .noItems { font-style: italic; }
 
@@ -134,4 +134,6 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
         padding: .75em;
     }
     #header .wrapper a.hamburger { display: inline-block; }
+    #content .post h2 { text-align: center; }
+    #footer p { text-align: center; }
 }
