--- a/core.css
+++ b/core.css
@@ -1,12 +1,19 @@
 * { margin: 0px; padding: 0px }
 html { overflow-y: scroll; }
-body { font-family: "Open Sans", Tahoma; font-size: 18px; color: #333; background-color: #f0f0f0; }
+body { font-family: "Open Sans", Tahoma; font-size: 18px; color: #333; background-color: #f6f6f6; }
 input, select, textarea { font-family: "Open Sans", Tahama; color: #111; background-color: #fff; border-radius: 3px; padding: 2px; }
 h1, h2, h3, h4, h5, h6 { font-weight: 100; }
 a, a:visited, a:active, a:hover { outline: none; text-decoration: underline; color: #06f; }
 table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #eee; }
 p { text-align: justify; }
-blockquote { margin: 2em; font-style: italic; }
+blockquote { 
+    margin: 2em; 
+    font-style: italic; 
+    padding: 2em;
+    background-color: #e0e0e0;
+    font-size: 1.4em;
+    border-radius: 10px;
+}
 
 .wrapper { 
     max-width: 1300px; 
