--- a/core.css
+++ b/core.css
@@ -123,18 +123,23 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
 
 @media (max-width: 480px){
     #header .wrapper ul {
-      position: absolute; 
-      top: 5.7em;
-      left: 0;
-      right: 0;
-      background-color: #012;
-      margin-right: 0;
-      display: none;
-      box-shadow: 0px 0px 10px #012;
+        position: absolute; 
+        top: 5.7em;
+        left: 0;
+        right: 0;
+        background-color: #012;
+        margin-right: 0;
+        display: none;
+        box-shadow: 0px 0px 10px #012;
+        transition: all .25s;
+    }
+    #header .wrapper ul.active {
+        display: block;
     }
     #header .wrapper ul li {
         display: block;
         margin-right: 0;
+        text-align: right;
     }
     #header .wrapper ul li:hover {
         background-color: #123;
@@ -143,7 +148,12 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
         display: block; 
         padding: .75em;
     }
+    #header .wrapper ul li a:after {
+        content: '\02192';
+        padding-left: 1em; 
+    }
     #header .wrapper a.hamburger { display: inline-block; }
     #content .post h2 { text-align: center; }
+    #content p.teaserLink { text-align: center; }
     #footer p { text-align: center; }
 }
