Cleanup of old/stupid posts

--- a/core.css
+++ b/core.css
@@ -3,7 +3,7 @@ html { overflow-y: scroll; }
 body { font-family: "Open Sans", Tahoma; font-size: 18px; color: #333; background-color: #f6f6f6; }
 input, select, textarea { font-family: "Open Sans", Tahama; color: #111; background-color: #fff; border-radius: 3px; padding: 2px; }
 h1, h2, h3, h4, h5, h6 { font-weight: 100; }
-a, a:visited, a:active, a:hover { outline: none; text-decoration: underline; color: #06f; }
+a, a:visited, a:active, a:hover { outline: none; text-decoration: none; color: #06f; }
 table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #eee; }
 p { text-align: justify; }
 p.center { text-align: center; }
