Updated styles / layout for new 2017 articles

--- a/core.css
+++ b/core.css
@@ -75,9 +75,9 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
 .post h2 { font-weight: 400; margin-bottom: 1em; text-align: left; color: #25458E; }
 .post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
 .post img { width: 100%; max-width: 600px; border: 1px solid #555; box-shadow: 0 0 20px #888; }
-.noItems { font-style: italic; }
+/* .noItems { font-style: italic; } */
 
-@media (max-height: 850px){
+@media (max-height: 900px){
     body { font-size: 15px; }
     #header { height: 10em; }
     #header .wrapper h3 { font-size: 2em; }
