--- a/core.css
+++ b/core.css
@@ -25,11 +25,12 @@ blockquote {
     height: 15em; 
     background-color: #012; 
     color: #fff; 
-    border-bottom: 2px solid #a0a0a0; 
+    border-bottom: 1px solid #a0a0a0; 
     background-size: 100%;
     box-shadow: 0px 5px 10px #888; 
     margin-bottom: 2em;
     position: relative;
+    background: linear-gradient(#012, #124);
 }
 #header .wrapper h3 { 
     font-size: 3em;
