--- a/core.css
+++ b/core.css
@@ -73,7 +73,7 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
 #footer .wrapper { padding: 0 1em; }
 #footer .wrapper p { border-top: 1px solid #a0a0a0; font-size: .875em; line-height: 2em; } 
 
-.post h2 { font-weight: 400; margin-bottom: 1em; text-align: left; color: #25458E; }
+.post h2, .post h2 a { font-weight: 400; margin-bottom: 1em; text-align: left; color: #25458E!important; }
 .post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
 .post img { width: 100%; max-width: 600px; border: 1px solid #555; box-shadow: 0 0 20px #888; }
 /* .noItems { font-style: italic; } */
