--- a/core.css
+++ b/core.css
@@ -75,9 +75,11 @@ div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-ra
 
 .post h2, .post h2 a { font-weight: 400; margin-bottom: 1em; text-align: left; color: #25458E!important; }
 .post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
-.post .authorInfo { font-size: .875em; margin-bottom: 1.5em; margin-top: -1em; border-bottom: 1px solid #c0c0c0; padding-bottom: .5em; color: #000;}
+.post .authorInfo { font-size: .875em; margin-bottom: 1.5em; margin-top: -1em; border-bottom: 1px solid #e0e0e0; padding-bottom: .5em; color: #000;}
 .post .authorInfo .dateText { padding-left: 1em; color: #888;}
 .post img { width: 100%; max-width: 600px; border: 1px solid #555; box-shadow: 0 0 20px #888; }
+
+.post.frontPage .authorInfo { margin-top: 1em; }
 /* .noItems { font-style: italic; } */
 
 @media (max-height: 900px){
