--- a/core.css
+++ b/core.css
@@ -88,6 +88,7 @@ pre {
     padding: 1em 1em 0 1em;
     margin-bottom: 1em;
     overflow: auto;
+    font-size: .875em;
 }
 
 span.inlineCode { display: inline; font-family: Courier; padding: 0; }
