--- a/core.css
+++ b/core.css
@@ -77,7 +77,7 @@ div.mugShot img { width: 200px; height: 200px; border: 2px solid #012; border-ra
 .post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
 .post .authorInfo { font-size: .875em; margin-bottom: 1.5em; margin-top: -1em; border-bottom: 1px solid #e0e0e0; padding-bottom: .5em; color: #000;}
 .post .authorInfo .dateText { padding-left: 1em; color: #888;}
-.post img { width: 100%; max-width: 600px; border: 1px solid #555; box-shadow: 0 0 20px #888; }
+.post img { width: 100%; max-width: 600px; border: 1px solid #ccc; box-shadow: 0 0 10px #ccc; }
 
 .post.frontPage h2 a:hover { text-decoration: underline; }
 .post.frontPage .authorInfo { margin-top: 1em; }
