--- a/core.css
+++ b/core.css
@@ -4,7 +4,7 @@ body { font-family: "Open Sans", Tahoma; font-size: 18px; color: #333; backgroun
 input, select, textarea { font-family: "Open Sans", Tahama; color: #111; background-color: #fff; border-radius: 3px; padding: 2px; }
 h1, h2, h3, h4, h5, h6 { font-weight: 100; }
 a, a:visited, a:active, a:hover { outline: none; text-decoration: none; color: #06f; }
-table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #eee; }
+table, p, blockquote, ol, ul { margin-bottom: 1em; }
 p { text-align: justify; }
 p.center { text-align: center; }
 
