--- a/core.css
+++ b/core.css
@@ -57,7 +57,7 @@ blockquote {
     background-position: center center;
 }
 
-#header .wrapper ul { list-style-type: none; margin-top: -14em; float: right; margin-right: 1em; } 
+#header .wrapper ul { list-style-type: none; margin-top: -14em; float: right; margin-right: 1em; margin-left: 0; } 
 #header .wrapper ul li { display: inline-block; text-shadow: none; margin-right: 2em; }
 #header .wrapper ul li a { text-decoration: none; color: #fff; letter-spacing: 2px; }
 
