--- a/core.css
+++ b/core.css
@@ -176,3 +176,10 @@ p.center img { cursor: pointer; }
     #content p.teaserLink { text-align: center; }
     #footer p { text-align: center; }
 }
+
+@media print {
+    #header { display: none; }
+    #footer { display: none; }
+    #content .rightCol { display: none; }
+    #disqus_thread { display: none; }
+}
