--- a/core.css
+++ b/core.css
@@ -35,6 +35,7 @@ blockquote {
     background: linear-gradient(#012, #124);
 }
 #header .wrapper h3 { 
+    display: inline-block;
     font-size: 3em;
     text-shadow: 0px 0px 10px #ccc;
     line-height: 3em;
@@ -46,7 +47,7 @@ blockquote {
     float: right;
     width: 1em;
     height: 1em;
-    margin-top: -1.3em;
+    margin-top: .3em;
     text-decoration: none;
     font-size: 2em;
     cursor: pointer;
@@ -57,7 +58,7 @@ blockquote {
     background-position: center center;
 }
 
-#header .wrapper ul { list-style-type: none; margin-top: -14em; float: right; margin-right: 1em; margin-left: 0; } 
+#header .wrapper ul { list-style-type: none; margin-top: 1em; float: right; margin-right: 1em; margin-left: 0; } 
 #header .wrapper ul li { display: inline-block; text-shadow: none; margin-right: 2em; }
 #header .wrapper ul li a { text-decoration: none; color: #fff; letter-spacing: 2px; }
 
@@ -80,7 +81,7 @@ div.mugShot img { width: 200px; height: 200px; border: 2px solid #012; border-ra
 .post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
 .post .authorInfo { font-size: .875em; margin-bottom: 1.5em; margin-top: -1em; border-bottom: 1px solid #e0e0e0; padding-bottom: .5em; color: #000;}
 .post .authorInfo .dateText { padding-left: 1em; color: #888;}
-.post img { width: 100%; max-width: 600px; border: 1px solid #ccc; box-shadow: 0 0 10px #ccc; background-color: #fff; }
+.post img { width: 100%; max-width: 480px; border: 1px solid #ccc; box-shadow: 0 0 10px #ccc; background-color: #fff; }
 
 .post.frontPage h2 a:hover { text-decoration: underline; }
 .post.frontPage .authorInfo { margin-top: 1em; }
@@ -101,7 +102,7 @@ p.center img { cursor: pointer; }
     body { font-size: 15px; }
     #header { height: 10em; }
     #header .wrapper h3 { font-size: 2em; }
-    #header .wrapper ul { margin-top: -9em; }
+    #header .wrapper ul { margin-top: 1em; }
 }
 
 @media (max-height: 550px){
@@ -111,7 +112,7 @@ p.center img { cursor: pointer; }
         line-height: 1.5em;
         padding: 0 0 0 .25em;
     }
-    #header .wrapper ul { margin-top: -2em; }
+    #header .wrapper ul { margin-top: 1em; }
     #header .wrapper ul li { margin-right: .5em; }
 }
 
@@ -123,7 +124,7 @@ p.center img { cursor: pointer; }
         line-height: 2.2em;
         padding: 0 0 0 .25em;
     }
-    #header .wrapper ul { margin-top: -2.2em; }
+    #header .wrapper ul { margin-top: 1em; }
     #header .wrapper ul li { margin-right: .5em; }
     .wrapper { max-width: 1500px; }
     #content .rightCol {
@@ -143,7 +144,7 @@ p.center img { cursor: pointer; }
 @media (max-width: 480px){
     #header .wrapper ul {
         position: absolute; 
-        top: 5.7em;
+        top: 2.65em;
         left: 0;
         right: 0;
         background-color: #012;
