--- a/core.css
+++ b/core.css
@@ -5,7 +5,7 @@ input, select, textarea { font-family: "Open Sans", Tahama; color: #111; backgro
 h1, h2, h3, h4, h5, h6 { font-weight: 100; }
 a, a:visited, a:active, a:hover { outline: none; text-decoration: none; color: #06f; }
 table, p, blockquote, ol, ul { margin-bottom: 1em; }
-p { text-align: justify; }
+/*  { text-align: justify; } */
 p.center { text-align: center; }
 ul, ol { margin: 0 4em 1em 4em; }
 sub, sup { font-size: .5em; }
@@ -32,7 +32,7 @@ blockquote {
     box-shadow: 0px 5px 10px #888; 
     margin-bottom: 2em;
     position: relative;
-    background: linear-gradient(#012, #124);
+    background: linear-gradient(#222, #1a3a7a);
 }
 #header .wrapper h3 { 
     display: inline-block;
@@ -68,7 +68,7 @@ blockquote {
 
 p.social { border-top: 1px solid #c0c0c0; border-bottom: 1px solid #c0c0c0; text-align: center; padding: .5em 0; margin: 2em 0; }
 p.social a { display: inline-block; margin-right: 1em; }
-p.banter { padding: 0 1em; text-align: center; }
+p.banter { padding: 0 1em; text-align: center; margin-bottom: 3em; }
 
 div.mugShot { text-align: center; }
 div.mugShot img { width: 200px; height: 200px; border: 2px solid #012; border-radius: 5px; box-shadow: 0px 0px 20px #111; background-color: #000; }
@@ -77,7 +77,7 @@ div.mugShot img { width: 200px; height: 200px; border: 2px solid #012; border-ra
 #footer .wrapper { padding: 0 1em; }
 #footer .wrapper p { border-top: 1px solid #a0a0a0; font-size: .875em; line-height: 2em; } 
 
-.post h2, .post h2 a { font-weight: 400; margin-bottom: 1em; text-align: left; color: #25458E!important; }
+.post h2, .post h2 a { font-weight: 400; margin-bottom: 1em; text-align: left; color: #4a4a4a!important; }
 .post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
 .post .authorInfo { font-size: .875em; margin-bottom: 1.5em; margin-top: -1em; border-bottom: 1px solid #e0e0e0; padding-bottom: .5em; color: #000;}
 .post .authorInfo .dateText { padding-left: 1em; color: #888;}
@@ -147,7 +147,7 @@ p.center img { cursor: pointer; }
         top: 2.65em;
         left: 0;
         right: 0;
-        background-color: #012;
+        background-color: #1a3a7a;
         margin-right: 0;
         display: none;
         box-shadow: 0px 0px 10px #012;
@@ -162,7 +162,7 @@ p.center img { cursor: pointer; }
         text-align: right;
     }
     #header .wrapper ul li:hover {
-        background-color: #123;
+        background-color: #3a5a9a;
     }
     #header .wrapper ul li a {
         display: block; 
@@ -176,6 +176,7 @@ p.center img { cursor: pointer; }
     /* #content .post h2 { text-align: center; } */
     #content p.teaserLink { text-align: center; }
     #footer p { text-align: center; }
+    ul, ol { margin: 0 0 1em 1em; }
 }
 
 @media print {
