--- a/core.css
+++ b/core.css
@@ -31,6 +31,8 @@ blockquote {
     background-size: 100%;
     margin-bottom: 2em;
     position: relative;
+    background: linear-gradient(90deg, #1a3a7a, #24549e);
+    box-shadow: 0 0 15px #555;
 }
 #header .wrapper h3 { 
     display: inline-block;
@@ -75,7 +77,7 @@ div.mugShot img { width: 200px; height: 200px; border: 2px solid #012; border-ra
 #footer .wrapper { padding: 0 1em; }
 #footer .wrapper p { border-top: 1px solid #a0a0a0; font-size: .875em; line-height: 2em; } 
 
-.post h2, .post h2 a { font-weight: 400; margin-bottom: 1em; text-align: left; color: #4a4a4a!important; }
+.post h2, .post h2 a { font-weight: 400; margin-bottom: 1em; text-align: left; color: #333!important; }
 .post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
 .post .authorInfo { font-size: .875em; margin-bottom: 1.5em; margin-top: -1em; border-bottom: 1px solid #e0e0e0; padding-bottom: .5em; color: #000;}
 .post .authorInfo .dateText { padding-left: 1em; color: #888;}
