--- a/core.css
+++ b/core.css
@@ -89,9 +89,10 @@ div.mugShot img { width: 200px; height: 200px; border: 2px solid #012; border-ra
 
 pre {
     background-color: #eee;
-    padding: 1em 1em 0 1em;
+    padding: 1em;
     margin-bottom: 1em;
     font-size: .875em;
+    overflow-x: auto;
 }
 
 span.inlineCode { display: inline; font-family: Courier; padding: 0; }
