--- a/core.css
+++ b/core.css
@@ -27,13 +27,15 @@ blockquote {
     height: 15em; 
     background-color: #1a3a7a; 
     color: #fff; 
-    border-bottom: 1px solid #a0a0a0; 
+    border-bottom: 1px solid #333; 
     background-size: 100%;
     margin-bottom: 2em;
-    position: relative;
     background: linear-gradient(90deg, #1a3a7a, #24549e);
     box-shadow: 0 0 15px #555;
-    border-top: .5em solid #135;
+    border-top: 1px solid #113;
+    position: fixed;
+    width: 100%;
+    top: 0;
 }
 #header .wrapper h3 { 
     display: inline-block;
@@ -63,7 +65,7 @@ blockquote {
 #header .wrapper ul li { display: inline-block; text-shadow: none; margin-right: 2em; }
 #header .wrapper ul li a { text-decoration: none; color: #fff; letter-spacing: 2px; }
 
-#content { min-height: 20em; }
+#content { min-height: 20em; padding-top: 5em; }
 #content .leftCol { padding: 0 2em; width: 65%; float: left; }
 #content .rightCol { width: 26%; float: right; margin: 0 2em 0 0; }
 
@@ -107,6 +109,7 @@ p.center img { cursor: pointer; }
     #header { height: 10em; }
     #header .wrapper h3 { font-size: 2em; }
     #header .wrapper ul { margin-top: 1em; }
+    #content { padding-top: 13em; }
 }
 
 @media (max-width: 1024px) {
@@ -119,6 +122,7 @@ p.center img { cursor: pointer; }
     }
     #header .wrapper ul { margin-top: 1em; }
     #header .wrapper ul li { margin-right: .5em; }
+    #content { padding-top: 5em; }
     #content .rightCol {
         float: none;
         width: auto;
