--- a/core.css
+++ b/core.css
@@ -24,7 +24,7 @@ blockquote {
     margin: 0px auto; 
 }
 #header { 
-    height: 15em; 
+    height: 10em; 
     background-color: #1a3a7a; 
     color: #fff; 
     border-bottom: 1px solid #333; 
@@ -36,6 +36,7 @@ blockquote {
     position: fixed;
     width: 100%;
     top: 0;
+    transition: height 100ms;
 }
 #header .wrapper h3 { 
     display: inline-block;
@@ -64,6 +65,15 @@ blockquote {
 #header .wrapper ul { list-style-type: none; margin-top: 1em; float: right; margin-right: 1em; margin-left: 0; } 
 #header .wrapper ul li { display: inline-block; text-shadow: none; margin-right: 2em; }
 #header .wrapper ul li a { text-decoration: none; color: #fff; letter-spacing: 2px; }
+
+#header.small { height: 3.5em; }
+#header.small .wrapper h3 {
+    font-size: 1.5em;
+    line-height: 2.2em;
+    padding: 0 0 0 .25em;
+}
+#header.small .wrapper ul { margin-top: 1em; }
+#header.small .wrapper ul li { margin-right: .5em; }
 
 #content { min-height: 20em; padding-top: 5em; }
 #content .leftCol { padding: 0 2em; width: 65%; float: left; }
