--- a/core.css
+++ b/core.css
@@ -89,9 +89,10 @@ div.mugShot img { width: 200px; height: 200px; border: 2px solid #012; border-ra
 #footer .wrapper { padding: 0 1em; }
 #footer .wrapper p { border-top: 1px solid #a0a0a0; font-size: .875em; line-height: 2em; } 
 
+.post { margin-bottom: 3em; }
 .post h2, .post h2 a { font-weight: 400; margin-bottom: 1em; text-align: left; color: #333!important; }
 .post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
-.post .authorInfo { font-size: .875em; margin-bottom: 1.5em; margin-top: -1em; border-bottom: 1px solid #e0e0e0; padding-bottom: .5em; color: #000;}
+.post .authorInfo { font-size: .875em; margin-bottom: 1.5em; margin-top: -1em; padding-bottom: .5em; color: #000;}
 .post .authorInfo .dateText { padding-left: 1em; color: #888;}
 .post img { width: 100%; max-width: 480px; border: 1px solid #ccc; box-shadow: 0 0 10px #ccc; background-color: #fff; }
 
