--- a/core.css
+++ b/core.css
@@ -25,12 +25,12 @@ blockquote {
 }
 #header { 
     height: 10em; 
-    background-color: #1a3a7a; 
+    background-color: #242424; 
     color: #fff; 
     border-bottom: 1px solid #333; 
     background-size: 100%;
     margin-bottom: 2em;
-    background: linear-gradient(90deg, #1a3a7a, #24549e);
+    background: linear-gradient(90deg, #242424, #24549e);
     box-shadow: 0 0 15px #555;
     position: fixed;
     width: 100%;
@@ -90,7 +90,7 @@ div.mugShot img { width: 200px; height: 200px; border: 2px solid #012; border-ra
 #footer .wrapper p { border-top: 1px solid #a0a0a0; font-size: .875em; line-height: 2em; } 
 
 .post { margin-bottom: 1em; }
-.post h2, .post h2 a { font-weight: 400; margin-bottom: 1em; text-align: left; color: #333!important; }
+.post h2, .post h2 a { font-weight: 400; margin-bottom: 1em; text-align: left; color: #24548e!important; }
 .post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
 .post .authorInfo { font-size: .875em; margin-bottom: 1.5em; margin-top: -1em; padding-bottom: .5em; color: #000;}
 .post .authorInfo .dateText { padding-left: 1em; color: #888;}
